Cleaning up the package

--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
   "name": "@matthamlin/react-error-boundary",
   "version": "1.0.0",
-  "description": "A simple error boundary component for React 16+",
+  "description":
+    "A simple error boundary component for React 16+",
   "main": "dist/index.js",
-  "author": "Matthew Hamlin <hamlim@outlook.com> (https://matthamlin.me/)",
+  "author":
+    "Matthew Hamlin <hamlim@outlook.com> (https://matthamlin.me/)",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1"
+    "@babel/cli": "^7.0.0-beta.44",
+    "@babel/core": "^7.0.0-beta.44",
+    "@babel/plugin-proposal-class-properties":
+      "^7.0.0-beta.44",
+    "@babel/preset-env": "^7.0.0-beta.44"
+  },
+  "peerDependencies": {
+    "react": "16.3.1",
+    "prop-types": "15.6.1"
   },
   "scripts": {
     "build": "babel src/index.js --out-file dist/index.js",
-    "postbuild": "cp dist/index.js demo/src/errorboundary.js"
+    "prepublish":
+      "babel src/ --out-dir dist/ --ignore=test.js",
+    "postbuild":
+      "cp dist/index.js demo/src/errorboundary.js"
+  },
+  "babel": {
+    "plugins": ["@babel/plugin-proposal-class-properties"]
   }
 }
